test/ui/test/missing-intrinsic-type.lushui
;;; TEST fail check --no-core

data It: Type of { it: It }

make (it: It): It = It.it

it0: It = make "test"
it1: It = make 344

